--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -40,7 +40,9 @@ ul {
     @apply px-[40px] py-[25px];
   }
 
-  
+  .padding-x-container {
+    @apply px-[40px];
+  }  
 }
 
 .inter-bold {
@@ -194,9 +196,23 @@ ul {
   background-position-x: 160px;
 }
 
+.hero-bg {
+  background-image: url("/hero-mobile.jpg");
+}
+
+.yellow-gradient {
+  background: linear-gradient(rgba(245, 230, 66, 0.7) 25%, rgba(245, 182, 66, 0.6) 47%, rgba(226, 159, 134, 0.5) 100%);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+}
+
 @media (min-width: 768px) {
   #statusFilter {
     background-position-x: 120px;
   }
+  .hero-bg {
+    background-image: url("/hero.jpg");
+  }
 }
+
+
 
