--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -196,26 +196,21 @@ ul {
   background-position-x: 160px;
 }
 
-.hero-bg {
-  /* background-image: url("/hero-mobile.jpg"); */
-}
-
 .hero-bg::before {
-  content: ""; /* Create a pseudo-element */
-  position: absolute; /* Position the pseudo-element */
-  top: 0; /* Set position */
-  left: 0; /* Set position */
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
+  content: ""; 
+  position: absolute;
+  top: 0;
+  left: 0; 
+  width: 100%; 
+  height: 100%; 
   background-image: url("/hero-mobile.jpg");
   background-repeat: no-repeat;
-  background-size: cover; /* Set background image */
-  filter: brightness(0.8); /* Apply filter to background image */
+  background-size: cover; 
+  filter: brightness(0.8); 
 }
 
 .yellow-gradient {
   background: linear-gradient(rgba(245, 230, 66, 0.7) 25%, rgba(245, 182, 66, 0.6) 47%, rgba(226, 159, 134, 0.5) 100%);
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 @media (min-width: 768px) {
